--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -4,10 +4,15 @@ blocks:
   - name: Deploy
     task:
       jobs:
-        - name: Deploy to integ
+        - name: Deploy to mobi
           commands:
-            - echo "deploying to integ"
+            - echo "deploying to mobi"
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
+promotions:
+  - name: Deploy to Mobi
+    pipeline_file: pipeline_2.yml
+    auto_promote:
+      when: branch = 'master' AND result = 'passed'
