--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -18,3 +18,5 @@ promotions:
     pipeline_file: pipeline_2.yml
     auto_promote:
       when: branch = 'master' AND result = 'passed'
+  - name: Deploy to integ
+    pipeline_file: pipeline_5.yml
